--- a/ppms_project/profilingApp/templates/activities/Parent Home.html
+++ b/ppms_project/profilingApp/templates/activities/Parent Home.html
@@ -45,7 +45,7 @@
                         
                         <ul class="dropdown-menu dropdown-menu-end p-2 bg-white" style="margin-right:3%;" aria-labelledby="parentButton">
                             <div class="text-dark bg-white"style="text-decoration: none;"href="">
-                                <div class="card p-3">
+                                <div class="card p-3" style="min-width: 13vw;">
                                     <div class="row d-block">
                                         <div class="d-flex justify-content-center my-2 rounded-circle">
                                             <i class="fa fa-lg fa-fw fa-user bi" style="margin-left:5px;"></i>  
@@ -84,7 +84,7 @@
 <body>
     <div class="" id="secondNav">
         <div class="row"> 
-            <div class="row d-flex justify-content-stretch align-items-center m-0">
+            <div class="row d-flex justify-content-stretch align-items-center m-1">
                 <div class="col-sm-6 d-flex justify-content-sm-start justify-content-center align-items-center text-uppercase">
                     <h5 class="m-0"style="text-align:left;">My Preschoolers</h5>
                 </div>
@@ -175,12 +175,27 @@
                                                     Gender: {{ item.gender }}
                                                 </div>
                                                 <div class="row">
-                                                    {% if item.vaccine_count >= 14 %}
-                                                    <div class="d-flex flex-row p-0"> Vaccine: <p class="text-success mx-1 my-0 fw-bold">Complete</p> </div>
-                                                    {% elif item.vaccine_count == 0 %}
-                                                    <div class="d-flex flex-row p-0"> Vaccine: <p class="text-danger mx-1 my-0 fw-bold">No Record</p></div>
+                                                    {% if item.whfa is None %}
+                                                        <div class="d-flex flex-row p-0"> Last BMI: <p class="text-info mx-1 my-0">No Record</p> </div>
+                                                    {% elif item.whfa > 3.0 %}
+                                                        <div class="d-flex flex-row p-0"> Last BMI: <p class=" mx-1 my-0" style="color: rgb(242, 98, 33);">Obese</p> </div>
+                                                    {% elif item.whfa > 2.0 and item.whfa <= 3.0 %}
+                                                        <div class="d-flex flex-row p-0"> Last BMI: <p class=" mx-1 my-0" style="color: rgb(242, 98, 33);">Overweight</p> </div>
+                                                    {% elif item.whfa >= -2.0 and item.whfa <= 2.0 %}
+                                                        <div class="d-flex flex-row p-0"> Last BMI: <p class=" mx-1 my-0" style="color: rgb(0, 165, 79);">Normal</p> </div>
+                                                    {% elif item.whfa >= -3.0 and item.whfa < -2.0 %}
+                                                        <div class="d-flex flex-row p-0"> Last BMI: <p class=" mx-1 my-0" style="color: rgb(255, 241, 2);">Moderately Wasted</p> </div>
                                                     {% else %}
-                                                    <div class="d-flex flex-row p-0"> Vaccine: <p class="text-warning mx-1 my-0 fw-bold">On Going</p></div>
+                                                        <div class="d-flex flex-row p-0"> Last BMI: <p class=" mx-1 my-0" style="color: rgb(238, 29, 35);">Severely Wasted</p> </div>
+                                                    {% endif %}
+                                                </div>
+                                                <div class="row">
+                                                    {% if item.vaccine_count >= 14 %}
+                                                    <div class="d-flex flex-row p-0"> Vaccine: <p class="text-success mx-1 my-0">Complete</p> </div>
+                                                    {% elif item.vaccine_count == 0 %}
+                                                    <div class="d-flex flex-row p-0"> Vaccine: <p class="text-info mx-1 my-0">No Record</p></div>
+                                                    {% else %}
+                                                    <div class="d-flex flex-row p-0"> Vaccine: <p class="text-warning mx-1 my-0">On Going</p></div>
                                                     {% endif %}
                                                 </div>
                                             </div>
