--- a/ppms_project/profilingApp/templates/activities/login_registration.html
+++ b/ppms_project/profilingApp/templates/activities/login_registration.html
@@ -160,8 +160,8 @@
                         <!-- EULA -->
                         <div class="form-check d-flex justify-content-start text-ligh mb-3">
                             <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault1" required>
-                            <a type="button" id="eulaButton" class="btn border-0 text-light p-0" for="flexRadioDefault1" data-toggle="modal" data-target="#exampleModal">
-                                I accept the terms.
+                            <a href="{% url 'privacyPolicy' %}" target="_blank"type="button" id="eulaButton" class="btn border-0 text-light p-0 h6" for="flexRadioDefault1">    
+                                I have read the <u>Privacy Policy</u>
                             </a>
                         </div>
                         <div class="form-group">
@@ -169,27 +169,6 @@
                         </div>
                     </form>
                 </div>  
-            </div>
-        </div>
-        <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Terms</h5>
-                        <button type="button" id ="modalCloseButton" class="close p-2" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true"><i class="fas fa-2x fa-lg fa-times text-secondary"></i></span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <i class="fas fa-lg fa-asterisk text-secondary" style="margin-right:10px;"></i>I am accepting the TERMS and i do AGREE that all the data that i inputted will be used for this website's purpose and this website's purpose only. 
-                        <br>
-                        <i class="fas fa-lg fa-asterisk text-secondary" style="margin-right:10px;"></i>I am AWARE that the data i inputted must be the right information and nothing but the TRUTH.
-                    </div>
-                    <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary bg-danger" data-dismiss="modal">Close</button>
-                    </div>
-                </div>
             </div>
         </div>
         <!-- Spacing -->
@@ -201,9 +180,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mb-2">
-                    <h2 class="footer-heading mb-4">About</h2>
-                    <p>The NNC, as mandated by law, is the country's highest policy-making 
-                        and coordinating body on nutrition.
+                    <h2 class="footer-heading mb-4 text-justify">About</h2>
+                    <p>The Preschooler Profiling and Monitoring System of Dasmariñas City Cavite monitors the nutritional status and vaccination status of preschoolers in the city's jurisdiction.
                     </p>
                 </div>
                 <div class="col-lg-8">
@@ -226,6 +204,7 @@
                             <ul class="list-unstyled">
                             <li><a href="https://www.nnc.gov.ph/" target="_blank"><img class="navbar-icon" style="margin-right:10px;" src="{% static '/Media/nncLogo.png' %}" alt="NNC-logo"> NNC Website</a></li>
                             <li><a href="https://doh.gov.ph/" target="_blank"><img class="navbar-icon" style="margin-right:10px;" src="{% static '/Media/dohLogo.png' %}" alt="DOH-logo">DOH Website</a></li>
+                            <li><a href="https://www.who.int/tools/child-growth-standards" target="_blank"><img class="navbar-icon" style="margin-right:10px;" src="{% static '/Media/whoLogo.png' %}" alt="WHO-logo">WHO Website</a></li>
                             </ul>
                         </div>
                     </div>
@@ -233,11 +212,12 @@
             </div>
             <div class="row text-center">
                 <div class="col-md-12">
-                    <div class="border-top pt-5">
+                    <div class="d-sm-flex d-block border-top pt-5 justify-content-center align-items-start text-center gap-2">
                         <p class="copyright"><small>
                         Copyright ©<script>document.write(new Date().getFullYear());</script> All rights reserved <i class="icon-heart text-danger" aria-hidden="true"></i>
                         </small>
                         </p>
+                        <a class="text-muted" href="{% url 'privacyPolicy' %}">|<small> <u>Privacy Policy</u></small></a>
                     </div>
                 </div>
             </div>
