minor revision checklist changes

--- a/ppms_project/profilingApp/templates/activities/Admin - Preschooler.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Preschooler.html
@@ -50,7 +50,7 @@
                                 <i id="navIcon" class="fa fa-fw fa-user-md" style="font-size: 24px;"></i>
                                 <span id="navText" style="font-size: 20px; " ><i class="fa fa-fw fa-user-md" style="font-size: 20px;margin-right:8px;"></i>BHW Validation</span>
                                 <span class="position-absolute top-25 start-75 translate-middle badge rounded-pill bg-danger">
-                                    {{ invalidated_count }}
+                                    !
                                     <span class="visually-hidden">BHW Validation</span>
                                 </span></a>
                             {% else %}
@@ -192,7 +192,7 @@
             <br>
             <div>
                 <div class="card-header">
-                    <h5>Record</h5>
+                    <h5>Summary Chart</h5>
                 </div>
                 <div class="card shadow-sm bg-white rounded">
 
