--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -66,8 +66,8 @@
                                 title="BHW Validation" >
                                 <i id="navIcon" class="fa fa-fw fa-user-md" style="font-size: 24px;"></i>
                                 <span id="navText" style="font-size: 20px;" ><i class="fa fa-fw fa-user-md" style="font-size: 20px;margin-right:8px;"></i>BHW Validation</span>
-                                <span class="position-absolute top-25 start-75 translate-middle badge -pill bg-danger">
-                                    {{ invalidated_count }}
+                                <span class="position-absolute top-25 start-75 translate-middle badge rounded-pill bg-danger">
+                                    !
                                     <span class="visually-hidden">BHW Validation</span>
                                 </span></a>
                             {% else %}
@@ -230,9 +230,9 @@
                                                 <thead>
                                                     <tr>
                                                         <th scope="col" class="text-center">No.</th>
+                                                        <th scope="col" class="text-center">Last Name</th>
                                                         <th scope="col" class="text-center">First Name</th>
                                                         <th scope="col" class="text-center">Middle Name</th>
-                                                        <th scope="col" class="text-center">Last Name</th>
                                                         <th scope="col" class="text-center">Suffix</th>
                                                         <th scope="col" class="text-center">Barangay</th>
                                                         <th scope="col" class="text-center">Status</th>
@@ -242,9 +242,9 @@
                                                     {% for bhw in bhws %}
                                                     <tr>
                                                         <td class="text-center"></td>
+                                                        <td class="text-center">{{ bhw.user.last_name }}</td>
                                                         <td class="text-center">{{ bhw.user.first_name }}</td>
                                                         <td class="text-center">{{ bhw.user.middle_name }}</td>
-                                                        <td class="text-center">{{ bhw.user.last_name }}</td>
                                                         <td class="text-center">{{ bhw.user.suffix_name }}</td>
                                                         <td class="text-center">{{ bhw.bhw_barangay}}</td>
                                                         {% if bhw.is_validated is True %}
