--- a/ppms_project/profilingApp/templates/activities/BHW Home.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Home.html
@@ -176,7 +176,7 @@
             <div>
                 <div class="card shadow-sm bg-white rounded">
                     <div class="card-header">
-                        <h5>Record</h5>
+                        <h5>Summary Chart</h5>
                     </div>
 
                     <div class="card-body p-3">
