--- a/ppms_project/profilingApp/templates/activities/login_registration.html
+++ b/ppms_project/profilingApp/templates/activities/login_registration.html
@@ -122,7 +122,7 @@
                                     {{ form.last_name }}
                                 </div>
                                 <div class="col-sm-6 mb-1"style="margin-top: 1%;">
-                                    <label for="">Suffix</label>
+                                    <label for="">Suffix (Optional)</label>
                                     {{ form.suffix_name }}
                                 </div>
                             </div>
@@ -217,7 +217,7 @@
                         Copyright ©<script>document.write(new Date().getFullYear());</script> All rights reserved <i class="icon-heart text-danger" aria-hidden="true"></i>
                         </small>
                         </p>
-                        <a class="text-muted" href="{% url 'privacyPolicy' %}">|<small> <u>Privacy Policy</u></small></a>
+                        <a class="text-muted" target="_blank" href="{% url 'privacyPolicy' %}">|<small> <u>Privacy Policy</u></small></a>
                     </div>
                 </div>
             </div>
