--- a/ppms_project/profilingApp/templates/activities/Parent Home.html
+++ b/ppms_project/profilingApp/templates/activities/Parent Home.html
@@ -153,9 +153,17 @@
                                     <div class="row">
                                         <div class="col-4 d-flex justify-content-center align-items-center text-center p-2">
                                             {% if item.gender == 'Male' %}
-                                                <img class="rounded-circle"src="{% static '/Media/kidBoy.jpg' %}" height="100%" width="100%" style="min-width: 85px;">
+                                                {% if item.ps_image %}
+                                                    <img class="rounded-circle" src="/Media/{{ item.ps_image }}" width="100%" height="100%" style="min-width: 85px;">
+                                                {% else %}
+                                                    <img class="rounded-circle"src="{% static '/Media/kidBoy.jpg' %}" height="100%" width="100%" style="min-width: 85px;">
+                                                {% endif %}
                                             {% elif item.gender == 'Female' %}
-                                                <img class="rounded-circle"src="{% static '/Media/kidGirl.jpg' %}" height="100%" width="100%" style="min-width: 85px;">
+                                                {% if item.ps_image %}
+                                                    <img class="rounded-circle" src="/Media/{{ item.ps_image }}" width="100%" height="100%" style="min-width: 85px;">
+                                                {% else %}
+                                                    <img class="rounded-circle"src="{% static '/Media/kidGirl.jpg' %}" height="100%" width="100%" style="min-width: 85px;">
+                                                {% endif %}
                                             {% endif %}
                                         </div>
                                         <div id="parentCardsText" class="col-8 d-flex justify-content-center align-items-center text-start text-body">
