--- a/ppms_project/profilingApp/templates/activities/Admin - Preschooler.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Preschooler.html
@@ -117,10 +117,10 @@
     <div class="container">
         <div class="container">
             <div class="row"> 
-                <div class="col-sm-6 mb-3 d-flex justify-content-sm-start justify-content-center">
+                <div class="col-sm-6 mb-3 d-flex justify-content-sm-start justify-content-center text-center">
                     <h3> Preschooler Status Overview</h3>
                 </div>
-                <div class="col-sm-6  mb-3 d-flex justify-content-sm-end justify-content-center">
+                <div class="col-sm-6  mb-3 d-flex justify-content-sm-end justify-content-center text-center">
                     <div class="text-right" style="width: 10rem;">
                         <div class="dropdown text-center" >
                             <h6 class="text-uppercase text-dark dropdown-header"><i class="fa fa-3x fa-fw fas fa-landmark " style="font-size: 15px; margin-right: 5px;"></i>Barangay</h6>
@@ -137,70 +137,196 @@
                 <hr>
             </div>
         </div>
-        <div class="row d-flex align-items-stretch">
-                <div class="col-lg mb-2">
+        <div class="row d-flex align-items-stretch mb-3">
+            <div class="col-lg mb-2">
                 <div class="card shadow-sm bg-white rounded h-100">
-                        <div class="card-header">
-                            <h5 class="card-title">Severely Wasted</h5>
-                        </div>
-                        <div class="card-body text-center">
-                            <p style="font-size: xx-large;" class="card-text">{{ severly }}</p>
-                        </div>
+                    <div class="card-header">
+                        <h5 class="card-title">Number of Preschoolers</h5>
                     </div>
-                </div>
-                <div class="col-lg mb-2">
-                    <div class="card shadow-sm bg-white rounded h-100">
-                        <div class="card-header">
-                            <h5 class="card-title">Moderately Wasted</h5>
+                    <div class="card-body text-center">
+                        <div class="row">
+                            <div class="col-md-8 d-block justify-content-center">
+                                <p style="font-size: xx-large;" class="card-text">{{ severly }}</p>
+                                <p class="text-uppercase fw-bold">Archived Preschoolers (60 months and above old) </p>
+                            </div>
+                            <div class="col-md-4 d-flex align-items-center justify-content-center">
+                                <button class="btn" type="button" id="adminArchive" data-bs-toggle="modal" data-bs-target="#modalArc"><h6 style="padding:5px;margin-bottom: 0px !important;"><i class="fa fa-archive"></i> View Archive</h6></button>
+                            </div>
                         </div>
-                        <div class="card-body text-center">
-                            <p style="font-size: xx-large;" class="card-text">{{ wasted }}</p>
+                        <hr>
+                        <div class="row">
+                            <div class="col-md-4 d-block">
+                                <p style="font-size: xx-large;" class="card-text">{{ severly }}</p>
+                                <p class="text-uppercase fw-bold">Registered preschoolers</p>
+                            </div>
+                            <div class="col-md-4 d-block">
+                                <p style="font-size: xx-large;" class="card-text">{{ severly }}</p>
+                                <p class="text-uppercase fw-bold">Preschoolers with records </p>
+                            </div>
+                            <div class="col-md-4 d-block">
+                                <p style="font-size: xx-large;" class="card-text">{{ severly }}</p>
+                                <p class="text-uppercase fw-bold">Preschoolers with no records </p>
+                            </div> 
                         </div>
-                    </div>
-                </div>
-                <div class="col-lg mb-2">
-                    <div class="card shadow-sm bg-white rounded h-100 ">
-                        <div class="card-header">
-                            <h5 class="card-title">Normal</h5>
-                        </div>
-                        <div class="card-body text-center">
-                            <p style="font-size: xx-large;" class="card-text">{{ normal }}</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg mb-2">
-                    <div class="card shadow-sm bg-white rounded h-100 ">
-                            <div class="card-header">
-                            <h5 class="card-title">Overweight</h5>
-                        </div>
-                        <div class="card-body text-center">
-                            <p style="font-size: xx-large;" class="card-text">{{ overweight }}</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg mb-2">
-                    <div class="card shadow-sm bg-white rounded h-100">
-                        <div class="card-header">
-                            <h5 class="card-title">Obese</h5>
-                        </div>
-                        <div class="card-body text-center">
-                            <p style="font-size: xx-large;" class="card-text">{{ obese }}</p>
-                        </div>
-                    </div>
-                </div>
-        </div>
-            <br>
-            <div>
-                <div class="card-header">
-                    <h5>Summary Chart</h5>
-                </div>
-                <div class="card shadow-sm bg-white rounded">
-
-                    <div class="card-body p-4">
-                        <canvas id="myBar" width="100%" height="50"></canvas>
                     </div>
                 </div>
             </div>
+        </div>
+<!-- MODAL FOR ARCHIVE PRESCHOOLERS -->
+        <div class="modal fade" id="modalArc" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-xl">
+                <div class="modal-content">
+                    <div class="modal-header d-flex align-items-center justify-content-between">
+                        <div>
+                            <h5 class="modal-title fa fa-archive" id="exampleModalLabel"> Preschooler Archive</h5>
+                        </div>
+                    </div>
+                    <div class="modal-body p-0">
+                        <div class="table-responsive " style="margin:30px;">
+                            <h5 class="text-center">List of preschooler who have an age older that 60 months.</h5>
+                            <table class="table table-hover table-cell-border" id="archive" >
+                                <thead>
+                                    <tr style="text-align: center;">
+                                        <th scope="col">No.</th>
+                                        <th scope="col">Last Name</th>
+                                        <th scope="col">First Name</th>
+                                        <th scope="col">Middle Name</th>
+                                        <th scope="col">Suffix</th>
+                                        <th scope="col">Birthdate</th>
+                                        <th scope="col">Age Last Measured (Month)</th>
+                                        <th scope="col">BMI STATUS</th>
+                                    </tr>   
+                                </thead>
+                                <tbody>
+                                    {% for preschooler in archive_preschoolers %}
+                                    <tr style="text-align: center;">
+                                        <td></td>
+                                        <td>{{ preschooler.last_name }}</td>
+                                        <td>{{ preschooler.first_name }}</td>
+                                        <td>{{ preschooler.middle_name }}</td>
+                                        <td>{{ preschooler.suffix_name }}</td>
+                                        <td>{{ preschooler.birthday }}</td>
+                                        <td>{{ preschooler.age_measured }} Months</td>
+                                        {% if preschooler.whfa is None %}
+                                        
+                                            <td> No Data Record </td>
+                                        {% elif preschooler.whfa > 3.0%}
+                                            <td style="background-color: rgb(242, 98, 33);"> Obese ({{ preschooler.whfa }})</td>
+                                        {% elif preschooler.whfa > 2.0 and preschooler.whfa <= 3.0 %}
+                                            <td style="background-color: rgb(242, 98, 33);"> Overweight ({{ preschooler.whfa }})</td>
+                                        {% elif preschooler.whfa >= -2.0 and preschooler.whfa <= 2.0 %}
+                                            <td style="background-color: rgb(0, 165, 79);"> Normal ({{ preschooler.whfa}})</td>
+                                        {% elif preschooler.whfa >= -3.0 and preschooler.whfa < -2.0 %}
+                                            <td style="background-color: rgb(255, 241, 2);"> Moderately Wasted ({{ preschooler.whfa }})</td>
+                                        {% else %}
+                                            <td style="background-color: rgb(238, 29, 35);"> Severely Wasted ({{preschooler.whfa }})</td>
+                                        {% endif %}                                   
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+    
+                            </table>
+                        </div>
+                    </div>
+                    <div class="card-footer d-flex justify-content-end">
+                            <button type="button" class="btn" style="background-color: #EF3A25; color: white;min-width: 10%;" data-bs-dismiss="modal" aria-label="Close"> Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+<!-- END OF MODAL -->
+        <div class="mb-4">
+            <div class="card-header">
+                <h5>Nutrition Summary Chart</h5>
+            </div>
+            <div class="card shadow-sm bg-white rounded">
+                <div class="row d-flex align-items-stretch" style="padding:25px 60px 0px 60px;">
+                    <div class="col-lg my-2">
+                        <div class="shadow-sm bg-white h-100 fw-bold justify-content-center d-flex align-items-center text-center" style="background-color:rgb(238, 29, 35) !important; border-radius: 50px;">
+                            <div class="d-block text-white p-3">
+                                <p style="font-size: xx-large;" class="card-text m-0">{{ severly }}</p>
+                                <h6 class="fw-bold">Severely Wasted</h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg my-2">
+                        <div class="shadow-sm bg-white h-100 fw-bold justify-content-center d-flex align-items-center text-center" style="background-color:rgb(255, 241, 2) !important; border-radius: 50px;">
+                            <div class="d-block text-white p-3">
+                                <p style="font-size: xx-large;" class="card-text m-0">{{ wasted }}</p>
+                                <h6 class="fw-bold">Moderately Wasted</h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg my-2">
+                        <div class="shadow-sm bg-white h-100 fw-bold justify-content-center d-flex align-items-center text-center" style="background-color:rgb(0, 165, 79) !important; border-radius: 50px;">
+                            <div class="d-block text-white p-3">
+                                <p style="font-size: xx-large;" class="card-text m-0">{{ normal }}</p>
+                                <h6 class="fw-bold">Normal</h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg my-2">
+                        <div class="shadow-sm bg-white h-100 fw-bold justify-content-center d-flex align-items-center text-center" style="background-color:rgb(242, 98, 33) !important; border-radius: 50px;">
+                            <div class="d-block text-white p-3">
+                                <p style="font-size: xx-large;" class="card-text m-0">{{ overweight }}</p>
+                                <h6 class="fw-bold">Overweight</h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg my-2">
+                        <div class="shadow-sm bg-white h-100 fw-bold justify-content-center d-flex align-items-center text-center" style="background-color:rgb(242, 98, 33) !important; border-radius: 50px;">
+                            <div class="d-block text-white p-3">
+                                <p style="font-size: xx-large;" class="card-text m-0">{{ obese }}</p>
+                                <h6 class="fw-bold">Obese</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body p-4">
+                    <canvas id="myBar" width="100%" height="50"></canvas>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="card-header">
+                    <h5>List of Preschoolers</h5>
+
+                </div>
+                <div class="card shadow-lg p-3 bg-white rounded" >
+                    <div class="table-responsive" >
+                        <table class="table table-hover table-cell-border" id="BHWuser_table" >
+                            <thead>
+                                <tr>
+                                    <th scope="col" class="text-center">No.</th>
+                                    <th scope="col" class="text-center">Last Name</th>
+                                    <th scope="col" class="text-center">First Name</th>
+                                    <th scope="col" class="text-center">Middle Name</th>
+                                    <th scope="col" class="text-center">Suffix</th>
+                                    <th scope="col" class="text-center">Phone Number</th>
+                                    <th scope="col" class="text-center">Email</th>
+                                    <th scope="col" class="text-center">Barangay Designation</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for bhw in bhws %}
+                                <tr>
+                                    <td class="text-center"></td>
+                                    <td class="text-center">{{ bhw.user.last_name }}</td>
+                                    <td class="text-center">{{ bhw.user.first_name }}</td>
+                                    <td class="text-center">{{ bhw.user.middle_name }}</td>
+                                    <td class="text-center">{{ bhw.user.suffix_name }}</td>
+                                    <td class="text-center">{{ bhw.user.phone_num}}</td>
+                                    <td class="text-center">{{ bhw.user.email }}</td>
+                                    <td class="text-center">{{ bhw.bhw_barangay }}</td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
     </div>
 </div>
@@ -269,5 +395,21 @@
         },
     });
 
+    var t = $('#archive').DataTable({
+        dom: 'frtip',
+        aoColumnDefs: [{
+            'bSortable': false,
+            'aTargets': ['nosort'],
+            'orderable': false,
+            'targets': [0, 7],
+        }],
+        order: [[1, 'asc']],
+        });
+        t.on('order.dt search.dt', function () {
+        let i = 1;
+        t.cells(null, 0, { search: 'applied', order: 'applied' }).every(function (cell) {
+            this.data(i++);
+        });}).draw();
+    
 </script>
 {% endblock %}
